<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#FF5E3A"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/admin_inscription_titre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true"
            android:text="@string/administrateur_inscription_titre_texte"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/admin_inscription_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="30sp"
            android:clickable="true"
            android:onClick="inscription"
            android:text="@string/bout_ok_txt"
            android:textColor="@drawable/button_color_selector"
            android:textSize="18sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/admin_inscription_ta_nom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_nom"
        android:inputType="text" />

    <EditText
        android:id="@+id/admin_inscription_ta_prenom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/admin_inscr_prenom"
        android:inputType="text" />

    <EditText
        android:id="@+id/admin_inscription_ta_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/admin_inscr_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/admin_inscription_ta_pseudo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_pseudo"
        android:inputType="text" />

    <EditText
        android:id="@+id/admin_inscription_ta_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/admin_inscription_ta_password_again"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:hint="@string/admin_inscr_password_retype"
        android:inputType="textPassword" />

</LinearLayout>