<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <EditText
        android:id="@+id/nom_epreuve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:hint="@string/hint_nom_epreuve" >
    </EditText>

    <EditText
        android:id="@+id/note_epreuve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:hint="@string/hint_note"
        android:inputType="number|numberDecimal" >
    </EditText>

    <EditText
        android:id="@+id/coeff_epreuve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_coefficient"
        android:inputType="number" >
    </EditText>

    <Button
        android:id="@+id/valider_bouton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/bout_ajouter_txt" />

</LinearLayout>