<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#FF5E3A"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/admin_crea_annee_titre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true"
            android:text="@string/administrateur_creation_annee_titre_texte"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
        
        <TextView
            android:id="@+id/admin_crea_annee_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="30dp"
            android:clickable="true"
            android:onClick="creerAnnee"
            android:text="@string/bout_ok_txt"
            android:textColor="@drawable/button_color_selector" 
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/admin_creation_annee_nom_eta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:enabled="false"
            android:focusable="false"
            android:hint="@string/admin_crea_annee_hint_etablissement"
            android:singleLine="true" />

        <Button
            android:id="@+id/crea_annee_bout_choisir_eta"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_style"
            android:onClick="openListEta"
            android:padding="10dp"
            android:text="@string/btn_choisir"
            android:textColor="@drawable/button_color_selector" />
    </LinearLayout>
    
    <EditText
        android:id="@+id/admin_creation_annee_nom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:hint="@string/hint_nom"
        android:inputType="text"
        android:singleLine="true" />
    
    <CheckBox
        android:id="@+id/administrateur_creation_annee_is_last_year"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/admin_creation_annee_checkbox_derniere_annee"
        android:textColor="#000000" />

    <Spinner
        android:id="@+id/admin_creation_annee_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:prompt="@string/crea_annee_decoupage" />

</LinearLayout>