<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#FF5E3A"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/admin_connexion_img_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="20sp"
            android:contentDescription="@string/desc_img"
            android:onClick="navigateToAccueil"
            android:src="@drawable/previous" />

        <TextView
            android:id="@+id/admin_connexion_titre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/administrateur_connexion_titre_texte"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/admin_connexion_txt_subtitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/admin_connexion_subtitle"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/connex_zone_pseudo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:hint="@string/hint_pseudo"
            android:inputType="text" />

        <EditText
            android:id="@+id/connex_zone_mdp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/connex_connexion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_style"
            android:onClick="connexion"
            android:padding="10dp"
            android:text="@string/admin_bout_connexion_texte"
            android:textColor="@drawable/button_color_selector" />

        <TextView
            android:id="@+id/connex_texte_mdp_oublie"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="resetPassword"
            android:text="@string/connex_texte_mdp_oublie"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/connex_texte_inscription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="inscription"
            android:text="@string/connex_texte_inscription"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>