<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#FF5E3A"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/admin_crea_diplome_titre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:text="@string/administrateur_creation_diplome_titre_texte"
            android:textSize="20sp" />
        
        <TextView
            android:id="@+id/admin_crea_diplome_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="30dp"
            android:clickable="true"
            android:onClick="creerDiplome"
            android:text="@string/bout_ok_txt"
            android:textColor="@drawable/button_color_selector" 
            android:textSize="18sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/admin_creation_diplome_nom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nom"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:singleLine="true" />

</LinearLayout>